--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,48 +10,62 @@
         android:id="@+id/tvPregunta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Qué sentido es este?"
-        tools:layout_editor_absoluteX="141dp"
-        tools:layout_editor_absoluteY="126dp" />
+        android:layout_marginTop="40dp"
+        android:text="@string/qu_sentido_es_este"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/img_Sentido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="141dp"
-        tools:layout_editor_absoluteY="192dp"
+        android:layout_marginTop="84dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvPregunta"
         tools:srcCompat="@tools:sample/avatars" />
 
     <EditText
         android:id="@+id/etSentido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:ems="10"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="355dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_Sentido" />
 
     <Button
         android:id="@+id/btnResponder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enviar"
-        tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="443dp" />
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="88dp"
+        android:text="@string/enviar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etSentido" />
 
     <TextView
         android:id="@+id/tvResultado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="553dp" />
+        android:layout_marginTop="68dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnResponder" />
 
     <Button
         android:id="@+id/btnOtro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Otro"
-        tools:layout_editor_absoluteX="219dp"
-        tools:layout_editor_absoluteY="440dp" />
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="80dp"
+        android:text="@string/otro"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etSentido" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
